--- a/index.html
+++ b/index.html
@@ -68,5 +68,5 @@
 	<!-- set the counter -->
 	<script src="js/counter.js"></script>
 	<script  src="js/scripts.js"></script>
-</body>BlackSky
+</body>
 </html>
